--- a/src/App.css
+++ b/src/App.css
@@ -63,8 +63,13 @@
 }
 
 .adminDash{
-  text-align: left;
-  float:none;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 40px;
 }
 
 .data{
