--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,11 @@
   margin-left: 250px;
   margin-bottom: 50px;
 }
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
  
 @keyframes App-logo-spin {
   from {
