--- a/src/App.css
+++ b/src/App.css
@@ -96,11 +96,11 @@
 }
 
 .alignment{
-  margin-left: 300px;
+  margin-left: 150px;
 }
 
 .alignment1{
-  margin-left: 100px;
+  margin-left: 5px;
 }
 
 .ref{
@@ -138,7 +138,39 @@
   margin-left: auto;
   margin-right: auto;
 }
+.font3{
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: x-large;
+  color: black;
+  margin-top: 10px;
+  margin-left: 150px;
+  margin-bottom: 70px;
+}
 
+.font5{
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: medium;
+  color: black;
+  margin-top: 100px;
+  margin-right: 300px;
+  text-align: center;
+}
+ 
+.font7{
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size:large;
+  color: black;
+  margin-right: 100px;
+  margin-top: 100px;
+}
+ 
+.font8{
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size:large;
+  color: black;
+  margin-left: 250px;
+  margin-top: 100px;
+}
  
 @keyframes App-logo-spin {
   from {
